# calibrated

./: iv_calibraton.launch  readme.md
data/: config.xml
data/Base_LiDAR_Frames/: 100000.pcd  100001.pcd  100002.pcd  100003.pcd  100004.pcd  100005.pcd  100006.pcd  100007.pcd  100008.pcd  100009.pcd  100010.pcd  100011.pcd  100012.pcd  100013.pcd  100014.pcd  100015.pcd  100016.pcd  100017.pcd  100018.pcd  100019.pcd  100020.pcd  100021.pcd  100022.pcd  100023.pcd
data/calibration/2020-10-03_14-25-27/0/: 100001.pcd  100003.pcd  100005.pcd  100006.pcd  100007.pcd  100008.pcd  100012.pcd  100013.pcd  100014.pcd  100015.pcd  100016.pcd  100017.pcd
data/calibration/2020-10-03_14-25-27/1/: 100002.pcd  100003.pcd  100004.pcd  100005.pcd  100006.pcd  100007.pcd  100008.pcd  100009.pcd  100010.pcd  100011.pcd  100012.pcd  100013.pcd  100014.pcd  100015.pcd  100016.pcd  100017.pcd
data/calibration/2020-10-03_14-25-27/2/: 100002.pcd  100003.pcd  100004.pcd  100005.pcd  100007.pcd  100008.pcd  100009.pcd  100010.pcd  100012.pcd  100013.pcd  100014.pcd  100015.pcd  100016.pcd  100017.pcd
data/calibration/2020-10-03_14-58-12/0/: 100001.pcd  100003.pcd  100007.pcd  100008.pcd  100009.pcd  100010.pcd
data/calibration/2020-10-03_14-58-12/1/: 100000.pcd  100001.pcd  100002.pcd  100003.pcd  100005.pcd  100006.pcd  100007.pcd  100008.pcd  100009.pcd  100010.pcd  100011.pcd  100012.pcd  100013.pcd
data/calibration/2020-10-03_14-58-12/2/: 100000.pcd  100001.pcd  100003.pcd  100004.pcd  100005.pcd  100006.pcd  100007.pcd  100010.pcd  100011.pcd  100012.pcd
data/log/: getmultilidardata.ERROR  getmultilidardata.INFO  getmultilidardata.WARNING  getmultilidardata.sundong.sundong.log.ERROR.20201003-142528.7849  getmultilidardata.sundong.sundong.log.ERROR.20201003-145812.2802  getmultilidardata.sundong.sundong.log.INFO.20201003-142403.5774  getmultilidardata.sundong.sundong.log.INFO.20201003-142450.6960  getmultilidardata.sundong.sundong.log.INFO.20201003-142527.7849  getmultilidardata.sundong.sundong.log.INFO.20201003-145752.2472  getmultilidardata.sundong.sundong.log.INFO.20201003-145812.2802  getmultilidardata.sundong.sundong.log.INFO.20201003-145946.4014  getmultilidardata.sundong.sundong.log.WARNING.20201003-142403.5774  getmultilidardata.sundong.sundong.log.WARNING.20201003-142450.6960  getmultilidardata.sundong.sundong.log.WARNING.20201003-142527.7849  getmultilidardata.sundong.sundong.log.WARNING.20201003-145752.2472  getmultilidardata.sundong.sundong.log.WARNING.20201003-145812.2802  getmultilidardata.sundong.sundong.log.WARNING.20201003-145946.4014
src/ivcommon/: CMakeLists.txt  README.md  ivcommon-config.cmake.in  package.xml
src/ivcommon/cmake/: functions.cmake
src/ivcommon/ivcommon/common/: blocking_queue.h  common.h  configuration_file_resolver.cc  configuration_file_resolver.h  fixed_ratio_sampler.cc  fixed_ratio_sampler.h  histogram.cc  histogram.h  lua.h  lua_parameter_dictionary.cc  lua_parameter_dictionary.h  make_unique.h  math.h  mutex.h  port.h  rate_timer.h  thread_pool.cc  thread_pool.h  time.cc  time.h
src/ivcommon/ivcommon/io/: proto_stream.cc  proto_stream.h
src/ivcommon/ivcommon/transform/: rigid_transform.cc  rigid_transform.h  transform.cc  transform.h
src/ivcommon/ivcommon/transform/proto/: transform.proto
src/ivcommon/ivcommon/transform/utm/: datum.cc  datum.h  utm.cc  utm.h
src/lidar_camera_calibration/: CMakeLists.txt  package.xml
src/lidar_camera_calibration/calibration_data/lidar_calibration/: HDL32_extrinsics.npz  HDL32_extrinsics.yaml  HDL32_temp_extrinsics.npz  HDL32_temp_extrinsics.yaml  RS80_extrinsics.npz  RS80_extrinsics.yaml
src/lidar_camera_calibration/calibration_data/lidar_camera_calibration/: extrinsics_rgb_left_and_HDL32.yaml  extrinsics_rgb_left_and_RS80.yaml  extrinsics_rgb_right_and_HDL32.yaml  extrinsics_rgb_right_and_RS80.yaml  intrinsics_rgb_left.yaml  intrinsics_rgb_right.yaml
src/lidar_camera_calibration/scripts/: calibrate_camera_lidar.py  calibrate_camera_lidar_local.py  calibrate_lidar.py  checkerboard.py  utils.py
